<resources>
    <string name="app_name">Mismo</string>
    <string name="search_hint">Search for category</string>
    <string name="menu_search">Search Categories</string>
    <string name="meet_bot_nav">Meet</string>
    <string name="learn_bot_nav">Learn</string>
    <string name="text_title_add">Title</string>
    <string name="hint_title_add">Enter title here..</string>
    <string name="text_date_add">Date</string>
    <string name="button_date_add">Pick a Date</string>
    <string name="text_category_add">Category</string>
    <string name="text_details_add">Details</string>
    <string name="hint_details_add">Anything you want to add?</string>
    <string name="button_save_add">Save</string>
    <string name="text_activity_title_add">Describe your Activity</string>
    <string name="text_when_label">When</string>
    <string name="text_where_label">Where</string>
    <string name="text_who_label">Who\'s going?</string>
    <string name="text_add_info_label">Additonal Info</string>
    <string name="button_join_detail">Join</string>
    <string name="cancel_action">Cancel</string>
    <string name="done_action">Done</string>
    <string name="text_where_add">Location</string>
    <string name="hint_where_add">Enter location here</string>

    <string-array name="categories">
        <item>Board Games</item>
        <item>After school</item>
        <item>Outdoors</item>
        <item>Lunch</item>
        <item>Friends</item>
    </string-array>

    <string name="youtube">VideoTube</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="clear_search_hint"><![CDATA[Reset Search By Clicking X --->]]></string>


</resources>
