<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_activity_title_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_activity_title_add"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="24sp"
        android:padding="12dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_title_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_title_add"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/text_activity_title_add"
        app:layout_constraintTop_toBottomOf="@id/text_activity_title_add" />

    <EditText
        android:id="@+id/edit_title_add"
        android:hint="@string/hint_title_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/text_title_add"
        app:layout_constraintTop_toBottomOf="@id/text_title_add"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_where_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_where_add"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/edit_title_add"
        app:layout_constraintTop_toBottomOf="@id/edit_title_add" />

    <EditText
        android:id="@+id/edit_where_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_where_add"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/text_where_add"
        app:layout_constraintTop_toBottomOf="@id/text_where_add"/>

    <TextView
        android:id="@+id/text_date_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/text_date_add"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/edit_where_add"
        app:layout_constraintTop_toBottomOf="@id/edit_where_add" />

    <Button
        android:id="@+id/button_date_add"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_date_add"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@id/text_date_add"
        app:layout_constraintTop_toBottomOf="@id/text_date_add"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_category_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/text_category_add"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/button_date_add"
        app:layout_constraintTop_toBottomOf="@id/button_date_add" />

    <Spinner
        android:id="@+id/spinner_category_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/categories"
        app:layout_constraintStart_toStartOf="@id/text_category_add"
        app:layout_constraintTop_toBottomOf="@id/text_category_add"/>

    <TextView
        android:id="@+id/text_details_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/text_details_add"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/spinner_category_add"
        app:layout_constraintTop_toBottomOf="@id/spinner_category_add" />

    <EditText
        android:id="@+id/edit_details_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/hint_details_add"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/text_details_add"
        app:layout_constraintTop_toBottomOf="@id/text_details_add" />

    <Button
        android:id="@+id/button_save_add"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/button_save_add"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="@id/edit_details_add"
        app:layout_constraintTop_toBottomOf="@id/edit_details_add"
        app:layout_constraintVertical_bias="0.264" />

    <include
        layout="@layout/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>