<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/image_cover_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_title_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_cover_detail" />

        <ProgressBar
            android:id="@+id/progress_bar_detail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:foregroundGravity="center"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/text_when_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/text_when_label"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/text_when_detail"
                app:layout_constraintStart_toStartOf="@id/text_title_detail"
                app:layout_constraintTop_toBottomOf="@id/text_title_detail" />

            <TextView
                android:id="@+id/text_when_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_when_label"
                app:layout_constraintTop_toTopOf="@+id/text_when_label" />

            <TextView
                android:id="@+id/text_where_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/text_where_label"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/text_where_detail"
                app:layout_constraintStart_toStartOf="@id/text_when_label"
                app:layout_constraintTop_toBottomOf="@id/text_when_label" />

            <TextView
                android:id="@+id/text_where_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_where_label"
                app:layout_constraintTop_toTopOf="@id/text_where_label" />

            <TextView
                android:id="@+id/text_who_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/text_who_label"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/text_who_detail"
                app:layout_constraintStart_toStartOf="@id/text_where_label"
                app:layout_constraintTop_toBottomOf="@id/text_where_label" />


            <TextView
                android:id="@+id/text_who_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_who_label"
                app:layout_constraintTop_toTopOf="@id/text_who_label" />


            <TextView
                android:id="@+id/text_add_info_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/text_add_info_label"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/text_add_info_detail"
                app:layout_constraintStart_toStartOf="@id/text_who_label"
                app:layout_constraintTop_toBottomOf="@id/text_who_label" />


            <TextView
                android:id="@+id/text_add_info_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingRight="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_add_info_label"
                app:layout_constraintTop_toTopOf="@id/text_add_info_label" />


            <include
                layout="@layout/bottom_nav_bar"
                android:id="@+id/navigation_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button_join_detail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_join_detail"
            android:textColor="@android:color/white"
            android:layout_marginBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_add_info_label"
            app:layout_constraintTop_toBottomOf="@id/text_add_info_detail"
            app:layout_constraintBottom_toTopOf="@id/navigation_view"/>



    </android.support.constraint.ConstraintLayout>


</ScrollView>